--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,37 @@
 
 		<title>Trackmania - Daily Stats</title>
 
+		<!-- HTML Meta Tags -->
+		<meta
+			name="description"
+			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone)"
+		/>
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://trackmania-daily-stats.vercel.app/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Trackmania - Daily Stats" />
+		<meta
+			property="og:description"
+			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone)"
+		/>
+		<meta property="og:image" content="https://trackmania-daily-stats.vercel.app/cover.png" />
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="trackmania-daily-stats.vercel.app" />
+		<meta property="twitter:url" content="https://trackmania-daily-stats.vercel.app/" />
+		<meta name="twitter:title" content="Trackmania - Daily Stats" />
+		<meta
+			name="twitter:description"
+			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone)"
+		/>
+		<meta name="twitter:image" content="https://trackmania-daily-stats.vercel.app/cover.png" />
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
 		<script src="https://unpkg.com/svelte-heatmap"></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
@@ -88,9 +119,39 @@
 			};
 		</script>
 
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"
+		/>
+
 		%svelte.head%
 	</head>
 	<body class="bg-slate-100 px-2">
 		<div>%svelte.body%</div>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js"
+			data-cfasync="false"
+		></script>
+		<script>
+			window.cookieconsent.initialise({
+				palette: {
+					popup: {
+						background: '#ecfdf5',
+						text: '#077558'
+					},
+					button: {
+						background: '#14b583',
+						text: '#ffffff'
+					}
+				},
+				theme: 'classic',
+				content: {
+					message:
+						'This website uses authentication cookies that are necessary for proper functionality. No analytics data is collected.'
+				}
+			});
+		</script>
 	</body>
 </html>
