Add year to frontend

--- a/src/app.html
+++ b/src/app.html
@@ -125,6 +125,12 @@
 			href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"
 		/>
 
+		<style type="text/tailwindcss">
+			.yearselected {
+				@apply bg-author-500 hover:!bg-author-600 text-white;
+			}
+		</style>
+
 		%svelte.head%
 	</head>
 	<body class="bg-slate-100 px-2">
