--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<!-- HTML Meta Tags -->
 		<meta
 			name="description"
-			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone)"
+			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
 		/>
 
 		<!-- Facebook Meta Tags -->
@@ -20,7 +20,7 @@
 		<meta property="og:title" content="Trackmania - Daily Stats" />
 		<meta
 			property="og:description"
-			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone)"
+			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
 		/>
 		<meta property="og:image" content="https://trackmania-daily-stats.vercel.app/cover.png" />
 
@@ -31,7 +31,7 @@
 		<meta name="twitter:title" content="Trackmania - Daily Stats" />
 		<meta
 			name="twitter:description"
-			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone)"
+			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
 		/>
 		<meta name="twitter:image" content="https://trackmania-daily-stats.vercel.app/cover.png" />
 
