--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Trackmania - Daily Stats</title>
+		<title>TMStats | Daily Medal Calendar</title>
 
 		<!-- HTML Meta Tags -->
 		<meta
@@ -17,7 +17,7 @@
 		<!-- Facebook Meta Tags -->
 		<meta property="og:url" content="https://trackmania-daily-stats.vercel.app/" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Trackmania - Daily Stats" />
+		<meta property="og:title" content="TMStats | Daily Medal Calendar" />
 		<meta
 			property="og:description"
 			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
@@ -28,7 +28,7 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta property="twitter:domain" content="trackmania-daily-stats.vercel.app" />
 		<meta property="twitter:url" content="https://trackmania-daily-stats.vercel.app/" />
-		<meta name="twitter:title" content="Trackmania - Daily Stats" />
+		<meta name="twitter:title" content="TMStats | Daily Medal Calendar" />
 		<meta
 			name="twitter:description"
 			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
