Update og links

--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,10 @@
 			property="og:description"
 			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
 		/>
-		<meta property="og:image" content="https://trackmania-daily-stats.vercel.app/cover.png" />
+		<meta
+			property="og:image"
+			content="https://trackmania-daily-stats.vercel.app/cover_tmstats.png"
+		/>
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -33,7 +36,10 @@
 			name="twitter:description"
 			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
 		/>
-		<meta name="twitter:image" content="https://trackmania-daily-stats.vercel.app/cover.png" />
+		<meta
+			name="twitter:image"
+			content="https://trackmania-daily-stats.vercel.app/cover_tmstats.png"
+		/>
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
