--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<!-- HTML Meta Tags -->
 		<meta
 			name="description"
-			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
+			content="Yearly view of your medals in a calendar. Share your daily maps medals with anyone!"
 		/>
 
 		<!-- Facebook Meta Tags -->
@@ -20,7 +20,7 @@
 		<meta property="og:title" content="TMStats | Daily Medal Calendar" />
 		<meta
 			property="og:description"
-			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
+			content="Yearly view of your medals in a calendar. Share your daily maps medals with anyone!"
 		/>
 		<meta
 			property="og:image"
@@ -34,7 +34,7 @@
 		<meta name="twitter:title" content="TMStats | Daily Medal Calendar" />
 		<meta
 			name="twitter:description"
-			content="Yearly view of your medals in daily maps. Share your daily maps medals with anyone!"
+			content="Yearly view of your medals in a calendar. Share your daily maps medals with anyone!"
 		/>
 		<meta
 			name="twitter:image"
