Add cell hover, loading icons

--- a/src/app.html
+++ b/src/app.html
@@ -45,7 +45,7 @@
 
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-		<script src="https://unpkg.com/svelte-heatmap"></script>
+		<script src="https://cdn.jsdelivr.net/gh/Meldiron/svelte-heatmap@1.1.2/dist/index.umd.js"></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
 			integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ="
