--- a/src/app.html
+++ b/src/app.html
@@ -6,21 +6,21 @@
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>TMStats | TOTD Medal Calendar</title>
+		<title>TMStats | Medal Calendar</title>
 
 		<!-- HTML Meta Tags -->
 		<meta
 			name="description"
-			content="Yearly view of your TOTD medals in a calendar. Share your daily maps medals with anyone!"
+			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
 
 		<!-- Facebook Meta Tags -->
 		<meta property="og:url" content="https://trackmania-daily-stats.vercel.app/" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="TMStats | TOTD Medal Calendar" />
+		<meta property="og:title" content="TMStats | Medal Calendar" />
 		<meta
 			property="og:description"
-			content="Yearly view of your TOTD medals in a calendar. Share your daily maps medals with anyone!"
+			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
 		<meta
 			property="og:image"
@@ -31,10 +31,10 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta property="twitter:domain" content="trackmania-daily-stats.vercel.app" />
 		<meta property="twitter:url" content="https://trackmania-daily-stats.vercel.app/" />
-		<meta name="twitter:title" content="TMStats | TOTD Medal Calendar" />
+		<meta name="twitter:title" content="TMStats | Medal Calendar" />
 		<meta
 			name="twitter:description"
-			content="Yearly view of your TOTD medals in a calendar. Share your daily maps medals with anyone!"
+			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
 		<meta
 			name="twitter:image"
