--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>TMStats | Medal Calendar</title>
+		<title>TMStats | Medal Tracker</title>
 
 		<!-- HTML Meta Tags -->
 		<meta
@@ -15,37 +15,37 @@
 		/>
 
 		<!-- Facebook Meta Tags -->
-		<meta property="og:url" content="https://trackmania-daily-stats.vercel.app/" />
+		<meta property="og:url" content="https://www.tmstats.eu/" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="TMStats | Medal Calendar" />
+		<meta property="og:title" content="TMStats | Medal Tracker" />
 		<meta
 			property="og:description"
 			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
 		<meta
 			property="og:image"
-			content="https://trackmania-daily-stats.vercel.app/cover_tmstats.png"
+			content="https://www.tmstats.eu/cover_tmstats.png"
 		/>
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta property="twitter:domain" content="trackmania-daily-stats.vercel.app" />
-		<meta property="twitter:url" content="https://trackmania-daily-stats.vercel.app/" />
-		<meta name="twitter:title" content="TMStats | Medal Calendar" />
+		<meta property="twitter:domain" content="www.tmstats.eu" />
+		<meta property="twitter:url" content="https://www.tmstats.eu/" />
+		<meta name="twitter:title" content="TMStats | Medal Tracker" />
 		<meta
 			name="twitter:description"
 			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
 		<meta
 			name="twitter:image"
-			content="https://trackmania-daily-stats.vercel.app/cover_tmstats.png"
+			content="https://www.tmstats.eu/cover_tmstats.png"
 		/>
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-		<script src="https://cdn.jsdelivr.net/gh/Meldiron/svelte-heatmap@1.1.2/dist/index.umd.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/Meldiron/svelte-heatmap@1.1.3/dist/index.umd.js"></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
 			integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ="
