--- a/src/app.html
+++ b/src/app.html
@@ -22,10 +22,7 @@
 			property="og:description"
 			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
-		<meta
-			property="og:image"
-			content="https://www.tmstats.eu/cover_tmstats.png"
-		/>
+		<meta property="og:image" content="https://www.tmstats.eu/cover_tmstats.png" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -36,16 +33,13 @@
 			name="twitter:description"
 			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
-		<meta
-			name="twitter:image"
-			content="https://www.tmstats.eu/cover_tmstats.png"
-		/>
+		<meta name="twitter:image" content="https://www.tmstats.eu/cover_tmstats.png" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-		<script src="https://cdn.jsdelivr.net/gh/Meldiron/svelte-heatmap@1.1.3/dist/index.umd.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/Meldiron/svelte-heatmap@1.1.8/dist/index.umd.js"></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
 			integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ="
