Fix icon, refetch logic for difficulty data

--- a/src/app.html
+++ b/src/app.html
@@ -56,6 +56,11 @@
 			body {
 				font-family: 'Montserrat', sans-serif;
 			}
+
+			.cc-color-override--807345202.cc-revoke {
+				color: rgb(255 255 255) !important;
+				background-color: rgb(8 147 107) !important;
+			}
 		</style>
 
 		<script src="https://cdn.tailwindcss.com?plugins=typography"></script>
