Format, add weekly cron job

--- a/src/app.html
+++ b/src/app.html
@@ -45,9 +45,12 @@
 			integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ="
 			crossorigin="anonymous"
 		></script>
-		
-		<link rel="preconnect" href="https://fonts.bunny.net">
-		<link href="https://fonts.bunny.net/css?family=montserrat:200,200i,400,400i,600,600i,800,800i" rel="stylesheet" />
+
+		<link rel="preconnect" href="https://fonts.bunny.net" />
+		<link
+			href="https://fonts.bunny.net/css?family=montserrat:200,200i,400,400i,600,600i,800,800i"
+			rel="stylesheet"
+		/>
 
 		<style>
 			body {
