--- a/src/app.html
+++ b/src/app.html
@@ -15,25 +15,25 @@
 		/>
 
 		<!-- Facebook Meta Tags -->
-		<meta property="og:url" content="https://www.tmstats.eu/" />
+		<meta property="og:url" content="https://www.tmstats.almostapps.eu/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="TMStats | Medal Tracker" />
 		<meta
 			property="og:description"
 			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
-		<meta property="og:image" content="https://www.tmstats.eu/cover_tmstats.png" />
+		<meta property="og:image" content="https://www.tmstats.almostapps.eu/cover_tmstats.png" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta property="twitter:domain" content="www.tmstats.eu" />
-		<meta property="twitter:url" content="https://www.tmstats.eu/" />
+		<meta property="twitter:domain" content="www.tmstats.almostapps.eu" />
+		<meta property="twitter:url" content="https://www.tmstats.almostapps.eu/" />
 		<meta name="twitter:title" content="TMStats | Medal Tracker" />
 		<meta
 			name="twitter:description"
 			content="Overview of all Trackmania medals you achieved. Share your campaign or daily maps medals with anyone!"
 		/>
-		<meta name="twitter:image" content="https://www.tmstats.eu/cover_tmstats.png" />
+		<meta name="twitter:image" content="https://www.tmstats.almostapps.eu/cover_tmstats.png" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
